# solution-memory-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
solution_memory_mcp/: __init__.py  __main__.py  server.py
solution_memory_mcp/models/: __init__.py  solution.py
solution_memory_mcp/search/: __init__.py  hybrid_search.py
solution_memory_mcp/storage/: __init__.py  chroma_store.py  sqlite_store.py
solution_memory_mcp/tools/: __init__.py  get_solution.py  list_tags.py  save_solution.py  search_solutions.py
specs/package-rename/: design.md  requirements.md  tasks.md
specs/solution-memory/: design.md  requirements.md  tasks.md
tests/: test_storage.py
