[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solution-memory-mcp"
version = "0.1.0"
description = "MCP Server for cross-project solution memory system"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Solution Memory Team" }
]
keywords = ["mcp", "memory", "solutions", "windsurf", "cascade"]

dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
solution-memory-mcp = "solution_memory_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["solution_memory_mcp"]

[tool.hatch.build.targets.sdist]
include = ["solution_memory_mcp"]
